35/a  mano/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  labels:
    mikey: mi-valor
spec:
  containers:
  - name: container-nginx
    image: nginx:alpine
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        memory: "64M"
      limits:
        memory: "128M"
