35/a  mano/06-randompod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debian
spec:
  containers:
    - name: debian
      image: dherrero/midebian
      imagePullPolicy: IfNotPresent
      args:
        - sleep
        - infinity
