35/a  mano/13-pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: iginx
      image: nginx:alpine
      volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
  volumes:
    - name: config
      configMap:
        name: game-demo
        items:
          - key: game.properties
            path: remap-game.properties
          - key: configuracion.properties
            path: remap-configuracion.properties
