35/a  mano/debian.yaml
# sin especificar mi imagen para que en la rasp use la armv7
apiVersion: v1
kind: Pod
metadata:
  name: debian
spec:
  containers:
    - name: debian
      image: debian
      imagePullPolicy: IfNotPresent
      args:
        - sleep
        - infinity
