35/a  mano/11-hello-ingress.yaml
# https://kubernetes.github.io/ingress-nginx/deploy/#docker-for-mac
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-hello-app
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    
spec:
  #ingressClassName: nginx-example
  defaultBackend:
    service:
      name: service-hello-v1
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: service-hello-v1
            port:
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: service-hello-v2
            port:
              number: 8080
